@@ -207,6 +207,17 @@
                     <textureradiooff>buttons/radio/options-radio-button-nf.png</textureradiooff>
                     <radioposx>-19</radioposx>
                 </control>
+                <control type="radiobutton" id="132">
+                    <include>ViewOptions.Button</include>
+                    <label>42445</label>
+                    <texturefocus border="2">dialogs/options/buttons/default-fo.png</texturefocus>
+                    <onclick>Skin.ToggleSetting(thumbnails.hidelabel)</onclick>
+                    <selected>!Skin.HasSetting(thumbnails.hidelabel)</selected>
+                    <visible>Control.IsVisible(500)</visible>
+                    <textureradioon>buttons/radio/options-radio-button-fo.png</textureradioon>
+                    <textureradiooff>buttons/radio/options-radio-button-nf.png</textureradiooff>
+                    <radioposx>-19</radioposx>
+                </control>
                 <control type="radiobutton" id="107">
                     <include>ViewOptions.Button</include>
                     <label>42405</label>
