@@ -32,7 +32,7 @@
                 <onleft condition="!Skin.HasSetting(KioskMode)">9010</onleft>
                 <onright>70</onright>
                 <preloaditems>2</preloaditems>
-                <itemlayout width="238" height="357" condition="!Container.Content(movies) + !Container.Content(tvshows) + !Container.Content(seasons)">
+                <itemlayout width="238" height="357" condition="!Container.Content(movies) + !Container.Content(tvshows) + !Container.Content(seasons) + !Skin.HasSetting(thumbnails.hidelabel)">
                     <control type="image">
                         <description>Poster</description>
                         <posx>6</posx>
@@ -75,6 +75,37 @@
 						<font>Font-AlbumCover-Title</font>
 						<scroll>false</scroll>
 					</control>
+                </itemlayout>
+                <itemlayout width="238" height="238" condition="!Container.Content(movies) + !Container.Content(tvshows) + !Container.Content(seasons) + Skin.HasSetting(thumbnails.hidelabel)">
+                    <control type="image">
+                        <description>Poster</description>
+                        <posx>6</posx>
+                        <posy>6</posy>
+                        <width>226</width>
+                        <height>226</height>
+                        <texture background="true" diffuse="arctic/covers/226.png" fallback="views/fallbacks/DefaultAlbumCover.png/square-large.png">$VAR[ThumbIcon]</texture>
+                        <aspectratio scalediffuse="false">scale</aspectratio>
+                    </control>
+                    <control type="image">
+                        <description>Border</description>
+                        <posx>-4</posx>
+                        <posy>-4</posy>
+                        <width>246</width>
+                        <height>246</height>
+                        <texture border="25">arctic/common/border.png</texture>
+                        <colordiffuse>Mod_Border_Fade</colordiffuse>
+                        <aspectratio>stretch</aspectratio>
+                    </control>
+                    <control type="image">
+                        <description>White</description>
+                        <posx>6</posx>
+                        <posy>6</posy>
+                        <width>226</width>
+                        <height>226</height>
+                        <texture>arctic/covers/226.png</texture>
+                        <colordiffuse>Mod_Cover_Fade</colordiffuse>
+                        <aspectratio>stretch</aspectratio>
+                    </control>
                 </itemlayout>
                 <itemlayout width="168" height="357" condition="Container.Content(movies) | Container.Content(tvshows) | Container.Content(seasons)">
                     <control type="image">
@@ -129,7 +160,7 @@
 						<scroll>false</scroll>
 					</control>
                 </itemlayout>
-                <focusedlayout width="238" height="357" condition="!Container.Content(movies) + !Container.Content(tvshows) + !Container.Content(seasons)">
+                <focusedlayout width="238" height="357" condition="!Container.Content(movies) + !Container.Content(tvshows) + !Container.Content(seasons) + !Skin.HasSetting(thumbnails.hidelabel)">
                     <control type="group">
                         <animation effect="zoom" end="100" start="80" time="150" delay="50" center="auto">Focus</animation>
                         <control type="image">
@@ -184,6 +215,50 @@
 							<aspectratio>stretch</aspectratio>
 							<colordiffuse>Mod_Glow_Border</colordiffuse>
 						</control>
+					</control>	
+                </focusedlayout>
+                <focusedlayout width="238" height="238" condition="!Container.Content(movies) + !Container.Content(tvshows) + !Container.Content(seasons) + Skin.HasSetting(thumbnails.hidelabel)">
+                    <control type="group">
+                        <animation effect="zoom" end="125" start="80" time="150" delay="50" center="auto">Focus</animation>
+                        <control type="image">
+							<description>Poster</description>
+							<posx>6</posx>
+							<posy>6</posy>
+							<width>226</width>
+							<height>226</height>
+							<texture background="true" diffuse="arctic/covers/226.png" fallback="views/fallbacks/DefaultAlbumCover.png/square-large.png">$VAR[ThumbIcon]</texture>
+							<aspectratio scalediffuse="false">scale</aspectratio>
+						</control>
+						<control type="image">
+							<description>Border</description>
+							<posx>-4</posx>
+							<posy>-4</posy>
+							<width>246</width>
+							<height>246</height>
+							<texture border="25">arctic/common/border.png</texture>
+							<aspectratio>stretch</aspectratio>
+							<colordiffuse>Mod_Border</colordiffuse>
+						</control>
+						<control type="image">
+							<description>Border</description>
+							<posx>-4</posx>
+							<posy>-4</posy>
+							<width>246</width>
+							<height>246</height>
+							<texture border="25">arctic/common/border.png</texture>
+							<aspectratio>stretch</aspectratio>
+							<colordiffuse>Mod_Border</colordiffuse>
+						</control>
+						<!--<control type="image">
+							<description>Border</description>
+							<posx>6</posx>
+							<posy>6</posy>
+							<width>226</width>
+							<height>226</height>
+							<texture border="25">arctic/common/border-glo-flat.png</texture>
+							<aspectratio>stretch</aspectratio>
+							<colordiffuse>Mod_Glow_Border</colordiffuse>
+						</control>-->
 					</control>	
                 </focusedlayout>
                 <focusedlayout width="168" height="357" condition="Container.Content(movies) | Container.Content(tvshows) | Container.Content(seasons)">
